use align self to fix width issue

--- a/assets/scss/shared-ui/_forms.scss
+++ b/assets/scss/shared-ui/_forms.scss
@@ -215,8 +215,7 @@
 
 	// GROUP: Form field
 	.sui-form-field {
-		line-height: 1;
-		
+
 		&.sui-input-sm {
 			max-width: 80px;
 		}
